@@ -14,6 +14,7 @@ from django.utils.importlib import import_module
 from django.contrib import messages
 from django.contrib.auth import authenticate
 from django.contrib.auth.models import User
+from django.contrib.auth.forms import UserCreationForm
 from django.contrib.auth.tokens import default_token_generator
 from django.contrib.sites.models import Site
 
@@ -27,8 +28,7 @@ from app_settings import AuthenticationMethod
         
 import app_settings
 
-alnum_re = re.compile(r"^\w+$")
-
+USERNAME_REGEX = UserCreationForm().fields['username'].regex
 
 class PasswordField(forms.CharField):
 
@@ -191,9 +191,9 @@ class BaseSignupForm(_base_signup_form_class()):
 
     def clean_username(self):
         value = self.cleaned_data["username"]
-        if not alnum_re.search(value):
+        if not USERNAME_REGEX.match(value):
             raise forms.ValidationError(_("Usernames can only contain "
-                                          "letters, numbers and underscores."))
+                                          "letters, digits and @/./+/-/_."))
         try:
             User.objects.get(username__iexact=value)
         except User.DoesNotExist:
